Bug 761228: Fix 304 response handling for custom conditional responses to prevent crash, r=jduell

--HG--
extra : rebase_source : 26494ad6bf23c3290f74fdd6ffc21a1db0b7f429